--- a/frontend/src/app/components/account-settings/set-body-parameters-dialog/set-body-parameters-dialog.component.html
+++ b/frontend/src/app/components/account-settings/set-body-parameters-dialog/set-body-parameters-dialog.component.html
@@ -37,7 +37,7 @@
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
       >
-        <mat-label>Waga</mat-label>
+        <mat-label>Waga (kg)</mat-label>
         <input
           type="number"
           max="600"
@@ -54,7 +54,7 @@
         appearance="outline"
         class="app-set-body-parameters-dialog__container--input"
       >
-        <mat-label>Wzrost</mat-label>
+        <mat-label>Wzrost (cm)</mat-label>
         <input
           type="number"
           max="600"
