--- a/frontend/src/app/components/recipes/recipes.component.html
+++ b/frontend/src/app/components/recipes/recipes.component.html
@@ -42,7 +42,7 @@
     <div class="app-recipes__container--add-recipe col-6 col-md-6 col-lg-4">
       <button
         class="app-recipes__container--add-button"
-        routerLink="/add_recipe"
+        routerLink="/recipes/add"
       >
         Dodaj przepis
       </button>
