--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -48,7 +48,7 @@
             class="app-products__card--input"
           >
             <mat-label>Ilość</mat-label>
-            <input matInput type="number" formControlName="quantity" />
+            <input matInput type="number" min="0" formControlName="quantity" />
             <span matSuffix>{{ inputMeasureUnit }}</span>
           </mat-form-field>
         </div>
@@ -57,7 +57,6 @@
         <button
           [disabled]="!checkValidation()"
           (click)="addProduct()"
-          color="primary"
           mat-mini-fab
         >
           <mat-icon>add</mat-icon>
