--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
@@ -30,7 +30,8 @@ form {
   padding-top: 15px;
 }
 
-app-add-product-to-recipe {
+app-add-product-to-recipe,
+app-add-another-step-to-recipe {
   width: 90%;
 }
 
