--- a/frontend/src/app/components/recipes/add-new-recipe/add-product-to-recipe/add-product-to-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-product-to-recipe/add-product-to-recipe.component.html
@@ -28,6 +28,7 @@
       matInput
       type="number"
       min="0"
+      max="10000"
       formControlName="productQuantity"
       required
     />
