--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -68,7 +68,7 @@
               class="card__input-container--input"
               appearance="outline"
             >
-              <mat-label>Czas (min)</mat-label>
+              <mat-label>Czas</mat-label>
               <input
                 matInput
                 formControlName="recipeTime"
@@ -77,6 +77,7 @@
                 min="1"
                 required
               />
+              <span matSuffix>min</span>
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
@@ -138,7 +139,7 @@
               class="card__input-container--input"
               appearance="outline"
             >
-              <mat-label>Kaloryczność (kcal)</mat-label>
+              <mat-label>Kaloryczność</mat-label>
               <input
                 formControlName="calories"
                 matInput
@@ -147,6 +148,7 @@
                 min="0"
                 required
               />
+              <span matSuffix>kcal</span>
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
@@ -155,7 +157,7 @@
               class="card__input-container--input"
               appearance="outline"
             >
-              <mat-label>Węglowodany (g)</mat-label>
+              <mat-label>Węglowodany</mat-label>
               <input
                 formControlName="carbohydrates"
                 matInput
@@ -164,6 +166,7 @@
                 min="0"
                 required
               />
+              <span matSuffix>g</span>
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
@@ -172,7 +175,7 @@
               class="card__input-container--input"
               appearance="outline"
             >
-              <mat-label>Tłuszcze (g)</mat-label>
+              <mat-label>Tłuszcze</mat-label>
               <input
                 formControlName="fats"
                 matInput
@@ -181,6 +184,7 @@
                 min="0"
                 required
               />
+              <span matSuffix>g</span>
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
@@ -189,7 +193,7 @@
               class="card__input-container--input"
               appearance="outline"
             >
-              <mat-label>Białka (g)</mat-label>
+              <mat-label>Białka</mat-label>
               <input
                 formControlName="proteins"
                 matInput
@@ -198,6 +202,7 @@
                 min="0"
                 required
               />
+              <span matSuffix>g</span>
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
@@ -263,6 +268,7 @@
             ></app-add-another-step-to-recipe>
           </div>
           <button
+            [disabled]="!recipeStepsAreValid"
             class="card__input-container--margin-bottom"
             (click)="addAnotherRecipeStep()"
             mat-mini-fab
@@ -271,7 +277,12 @@
           </button>
           <div>
             <button mat-button matStepperPrevious>Powrót</button>
-            <button mat-button matStepperNext class="card__next-button">
+            <button
+              [disabled]="!recipeStepsAreValid || !recipeSteps.length"
+              mat-button
+              matStepperNext
+              class="card__next-button"
+            >
               Dalej
             </button>
           </div>
