--- a/frontend/src/app/components/recipes/recipe-card/recipe-card.component.html
+++ b/frontend/src/app/components/recipes/recipe-card/recipe-card.component.html
@@ -8,7 +8,7 @@
     <div class="app-recipe-card__container--recipe-summary">
       <div class="app-recipe-card__container--recipe-summary-description">
         <mat-icon>access_time</mat-icon>
-        <span>{{ recipe.cookingTime }}</span>
+        <span>{{ recipe.cookingTime }} min</span>
       </div>
       <div class="app-recipe-card__container--recipe-summary-description">
         <mat-icon>person_outline</mat-icon>
