--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -131,7 +131,9 @@
           <div
             class="app-account-settings__card--inline app-account-settings__card--to-right"
           >
-            <mat-icon>edit</mat-icon>
+            <mat-icon [routerLink]="['/recipes/edit', recipe.id]"
+              >edit</mat-icon
+            >
             <mat-icon>delete_outline</mat-icon>
           </div>
         </div>
