--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
@@ -187,5 +187,25 @@ input[type="number"] {
     .card__next-button {
       margin-bottom: 10px;
     }
+
+    .card__end-text {
+      font-weight: 400;
+    }
+
+    .card__share-button {
+      width: 50%;
+      padding: 14px 23px;
+      margin: 40px 0;
+      border-radius: 4px;
+      text-transform: uppercase;
+      color: #616159;
+      background-color: white;
+      font-size: 13px;
+      font-weight: 500;
+      border: none;
+      background: none;
+      box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+        0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    }
   }
 }
