fixed edit recipe and some layout

--- a/frontend/src/app/components/schedule/schedule.component.html
+++ b/frontend/src/app/components/schedule/schedule.component.html
@@ -46,7 +46,7 @@
           >
         </div>
         <ng-template #noRecipeSelected
-          ><p>Nie wybrano przepisu.</p>
+          ><p class="app-schedule__card--text">Nie wybrano przepisu.</p>
         </ng-template>
       </div>
     </div>
