--- a/frontend/src/app/components/account-settings/account-settings.component.scss
+++ b/frontend/src/app/components/account-settings/account-settings.component.scss
@@ -66,6 +66,14 @@ span {
     margin-top: 90px;
     min-height: 85vh;
 
+    .app-account-settings__card--icon {
+      transition: all 0.5s ease-in-out;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
     .app-account-settings__card--image-login-data-container {
       display: flex;
       flex-direction: column;
@@ -135,7 +143,7 @@ span {
             align-items: center;
 
             img {
-              width: 100px;
+              width: 75px;
               height: 50px;
               margin: 15px 0;
               cursor: pointer;
@@ -158,10 +166,6 @@ span {
 
             mat-icon {
               cursor: pointer;
-            }
-
-            mat-icon:nth-child(2) {
-              color: #ab1827;
             }
           }
         }
