--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -1,6 +1,6 @@
 <div class="app-add-new-recipe">
   <mat-card class="card">
-    <mat-stepper linear #stepper>
+    <mat-stepper linear>
       <mat-step [stepControl]="mainRecipeDataFormGroup">
         <form [formGroup]="mainRecipeDataFormGroup">
           <ng-template matStepLabel>Podstawowe dane</ng-template>
