--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
@@ -1,5 +1,10 @@
 $add-recipe-background-color: #fafafa;
 
+.test {
+  background-color: red;
+  visibility: hidden;
+}
+
 mat-stepper {
   width: 100%;
 }
@@ -207,5 +212,17 @@ input[type="number"] {
       box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
         0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     }
+  }
+}
+
+@media (max-width: 768px) {
+  ::ng-deep .mat-step-text-label {
+    font-size: 11px;
+  }
+}
+
+@media (max-width: 576px) {
+  ::ng-deep .mat-step-text-label {
+    visibility: hidden;
   }
 }
