--- a/frontend/src/app/components/schedule/schedule.component.scss
+++ b/frontend/src/app/components/schedule/schedule.component.scss
@@ -78,6 +78,11 @@ mat-checkbox {
             margin-left: auto;
             margin-right: 10px;
             cursor: pointer;
+            transition: all 0.5s ease-in-out;
+
+            &:hover {
+              transform: scale(1.1);
+            }
           }
         }
       }
@@ -147,6 +152,15 @@ mat-checkbox {
 @media (max-width: 576px) {
   .app-schedule {
     .app-schedule__card {
+      .app-schedule__card--text {
+        text-align: center;
+      }
+
+      .app-schedule__card--detail-to-right {
+        margin-left: auto;
+        margin-right: 0;
+      }
+
       .app-schedule__card--meals-container {
         padding: 10px;
 
