--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
@@ -1,10 +1,5 @@
 $add-recipe-background-color: #fafafa;
 
-.test {
-  background-color: red;
-  visibility: hidden;
-}
-
 mat-stepper {
   width: 100%;
 }
@@ -117,7 +112,7 @@ input[type="number"] {
       .card__input-container--input-description {
         word-wrap: break-word;
         word-break: break-all;
-        height: 80px;
+        height: 105px;
       }
 
       .card__input-container--radio-button {
@@ -215,14 +210,145 @@ input[type="number"] {
   }
 }
 
+@media (max-width: 992px) {
+  .app-add-new-recipe {
+    .card {
+      .card__input-container {
+        .card__input-container--input {
+          width: 60%;
+        }
+
+        .card__input-container--input-description {
+          height: 130px;
+        }
+
+        .card__input-container--radio-button {
+          padding: 5px 20px;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 768px) {
   ::ng-deep .mat-step-text-label {
     font-size: 11px;
+  }
+
+  .app-add-new-recipe {
+    .card {
+      .card__input-container {
+        .card__input-container--input {
+          width: 70%;
+        }
+
+        .card__input-container--input-description {
+          height: 150px;
+        }
+
+        .card__input-container--image-preview {
+          width: 400px;
+          height: 250px;
+
+          .card__input-container--image-icon {
+            width: 35px;
+            height: 35px;
+            font-size: 35px;
+          }
+
+          .card__input-container--image {
+            width: 400px;
+            height: 250px;
+          }
+
+          p {
+            font-size: 12px;
+          }
+        }
+
+        .card__input-container--radio-button {
+          padding: 5px 5px;
+        }
+      }
+    }
   }
 }
 
 @media (max-width: 576px) {
   ::ng-deep .mat-step-text-label {
     visibility: hidden;
+  }
+
+  mat-radio-group {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .app-add-new-recipe {
+    .card {
+      p {
+        font-size: 14px;
+      }
+
+      .card__input-container {
+        .card__input-container--input {
+          width: 70%;
+        }
+
+        .card__input-container--input-description {
+          height: 150px;
+        }
+
+        .card__input-container--image-preview {
+          width: 300px;
+          height: 200px;
+
+          .card__input-container--image-icon {
+            width: 35px;
+            height: 35px;
+            font-size: 35px;
+          }
+
+          .card__input-container--image {
+            width: 300px;
+            height: 200px;
+          }
+
+          p {
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .app-add-new-recipe {
+    .card {
+      .card__input-container {
+        .card__input-container--input {
+          width: 80%;
+        }
+
+        .card__input-container--input-description {
+          height: 150px;
+        }
+
+        .card__input-container--image-preview {
+          width: 250px;
+          height: 175px;
+
+          .card__input-container--image {
+            width: 250px;
+            height: 175px;
+          }
+        }
+
+        .card__input-container--person-count-input {
+          width: 35%;
+        }
+      }
+    }
   }
 }
